--- a/cartos-interface/src/locales/en.json
+++ b/cartos-interface/src/locales/en.json
@@ -79,8 +79,8 @@
         "textoTermos": "Terms text",
         "textoPriv": "Privacy text",
         "buttonAjuda": "Help",
-        "folioAnaliseHeadline": "The Book of Properties of Tombo de Mitra - Document Searching",
-        "tituloProjeto": "The Book of Properties of Tombo de Mitra - Document Searching",
+        "folioAnaliseHeadline": "Hosting and Exploring System of Comic Books",
+        "tituloProjeto": "Hosting and Exploring System of Comic Books",
         "imprimir": "Print",
         "primeiroPagina": "First",
         "ultimaPagina": "Last",
