--- a/cartos-interface/src/locales/es.json
+++ b/cartos-interface/src/locales/es.json
@@ -79,8 +79,8 @@
         "textoTermos": "Texto termos",
         "textoPriv": "Texto privacidade",
         "buttonAjuda": "Ajuda",
-        "folioAnaliseHeadline": "El Libro de Propiedades de Tombo da Mitra - Sistema de Búsqueda",
-        "tituloProjeto": "El Libro de Propiedades de Tombo da Mitra - Sistema de Búsqueda",
+        "folioAnaliseHeadline": "Sistema de Recepción y Exploración de Cómics",
+        "tituloProjeto": "Sistema de Recepción y Exploración de Cómics",
         "imprimir": "Imprimir",
         "primeiroPagina": "Primeira",
         "ultimaPagina": "Última",
