com novos inputs para além dos dropdowns

--- a/cartos-interface/src/locales/en.json
+++ b/cartos-interface/src/locales/en.json
@@ -231,6 +231,13 @@
         "int": "Interpretative",
         "sd": "Semi-diplomatic",
         "tipo": "Type",
+        "tipo2": "New Type",
+        "edi": "Publishing Company",
+        "edi2": "New Publishing Company",
+        "lin": "Language",
+        "lin2": "New Language",
+        "col": "Collection",
+        "col2": "New Collection",
         "fre": "Front",
         "v": "Verse",
         "desc": "Description",
