--- a/cartos-interface/src/locales/es.json
+++ b/cartos-interface/src/locales/es.json
@@ -229,6 +229,13 @@
         "int": "Interpretativo",
         "sd": "Semi-diplomático",
         "tipo": "Tipo",
+        "tipo2": "Nuevo Tipo",
+        "edi": "Compañia de Publicidad",
+        "edi2": "Nueva Compañia de Publicidad",
+        "lin": "Idioma",
+        "lin2": "Nuevo Idioma",
+        "col": "Colección",
+        "col2": "Nueva Colección",
         "fre": "Frente",
         "v": "Versículo",
         "desc": "Descripción",
