--- a/cartos-interface/src/locales/pt.json
+++ b/cartos-interface/src/locales/pt.json
@@ -286,19 +286,23 @@
         "int": "Interpretativa",
         "sd": "Semidiplomática",
         "tipo": "Tipo",
+        "tipo2": "Novo Tipo",
         "fre": "Rosto",
         "v": "Verso",
         "desc": "Descrição",
         "col": "Coleção",
+        "col2": "Nova Coleção",
         "tit": "Título",
         "num":"Número",
         "serie":"Série",
         "lin":"Língua",
+        "lin2":"Nova Língua",
         "pag":"Página",
         "size": "Size",
         "pers": "Personagens",
         "estado": "Estado",
         "edi": "Editora",
+        "edi2": "Nova Editora",
         "dataP": "Data de Publicação",
         "sum": "Sumário",
         "trans": "Transcrição",
