--- a/cartos-interface/src/locales/pt.json
+++ b/cartos-interface/src/locales/pt.json
@@ -289,6 +289,7 @@
     "p1": {
         "ins": "Inserir elemento",
         "id": "Identificador",
+        "imp":"Importar",
         "ver": "Versão",
         "int": "Interpretativa",
         "sd": "Semidiplomática",
