--- a/cartos-interface/src/locales/pt.json
+++ b/cartos-interface/src/locales/pt.json
@@ -90,7 +90,6 @@
         "palavras" :  "palavras", 
         "obrigacaoNumero" : "Por favor insira número maior que zero!", 
         "resultadoPara" : "Frase de pesquisa: ", 
-        "resultadoLinha" : "Linha", 
         "resultadoPeriodo" : "Período",
         "creditos" : "Créditos", 
         "sabermais" : "Saber mais", 
@@ -316,14 +315,19 @@
         "trans": "Transcrição",
         "rev": "Revisão",
         "obs": "Observações",
-        "foto": "Adicionar Capa",
+        "ACapa": "Adicionar Capa",
+        "foto": "Foto",
+        "capa":"Capa",
         "f": "Foto",
+        "Avideo":"Adicionar Vídeo",
+        "Video":"Vídeo",
         "file": "Ficheiro",
         "tfile": "Ficheiro de texto",
         "reset": "Repôr formulário por omissão",
         "save": "Guardar",
         "sub": "Submeter",
         "ajuda": "Texto de ajuda",
+        "apagar":"Apagar",
         "leave": "Sair da inserção",
         "acept": "Aceitar Pedido",
         "string": "String",
