pesquisas realizadas e gestão de users a dar

--- a/cartos-interface/src/locales/en.json
+++ b/cartos-interface/src/locales/en.json
@@ -285,5 +285,13 @@
     },
     "tForm": {
         "vT": "View tags"
+    },
+    "pr":{
+        "da":"Search's Date",
+        "nome":"Name",
+        "texto":"Text",
+        "col":"Collection",
+        "edi": "Publishing Company",
+        "d":"Date"
     }
 }
